resources/sass/_blog.scss
@import "~kingdom-css/src/modules/layout";
@import "~kingdom-css/src/modules/sizing";
@import "~kingdom-css/src/modules/spacing";
@import "~kingdom-css/src/modules/lists";
@import "~kingdom-css/src/modules/clearfix";

%unimposing {
  @extend .color-gray-700 !optional;
}

.blog {
  max-width: 100%;
  width: $readable-line-length-min + $readable-line-length-max;
  min-width: auto;

  margin-left: auto;
  margin-right: auto;

  @include padding-relative;

  p {
    @include width-readable;
  }
}

.blog-entry-list {
  @include list-unstyled;

  > * + * {
    @extend %mt-1 !optional;
  }

  .blog-entry-link {
    text-decoration: none;
    color: inherit;
  }
}

.blog-entry-title {
  :link & {
    @include apply-color(link);
    text-decoration: underline;
  }

  :visited & {
    @include apply-color(visited);
  }
}

.blog-entry-short {
  > * {
    @extend %mt-0 !optional;
  }

  .blog-entry-footer {
    @extend %unimposing;
  }
}

.blog-latest-entries-links {
  @include list-unstyled;

  > * + * {
    @extend %mt-1;
  }
}

.blog-entry-publication-info {
  @extend %unimposing;
}

.blog-author-list {
  @include list-comma-separated;
}

.blog-entry-nav {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;

  > * {
    @include display-block;
    @include space-inside;

    > * {
      @include display-block;
    }
  }

  [rel] {
    text-decoration: none;
    color: inherit;

    &:link > :last-child {
        @include apply-color(link);
        text-decoration: underline;
    }

    &:visited > :last-child {
      @include apply-color(visited);
    }
  }

  small {
    @extend %unimposing;
  }

  @include clearfix;
  @supports(display: flex) {
    &:after {
      display: none;
    }
  }

  > :first-child {
    float: right;
  }

  > :last-child {
    float: left;
  }
}

.blog-social-sharing {
  h2 {
    @extend %text-small !optional;
    @extend %unimposing;
  }

  ul {
    @include list-inline;
  }

  .share-link-prefix {
    @extend .sr-only !optional;
  }
}

.blog-related-content {
  header small {
    @extend %unimposing;
  }

  > div {
    @extend %border !optional;
    @include space-inside;
    max-width: max-content;
  }
}

@media(min-width: $readable-line-length-max + $readable-line-length-min) {
  @supports(display: grid) {
    .blog-entry {
      display: grid;
      grid-template-columns: $readable-line-length-max 1fr;
      grid-auto-flow: dense;
      @include length-relative(grid-column-gap);

      > * {
        grid-column: 1 / span 1;
      }

      .blog-content-start {
        align-self: end;
      }

      .blog-content-end {
        align-self: start;
      }

      > .blog-related-content {
        grid-column: span 1 / -1;
      }

      > .full-width {
        grid-column: 1 / -1;
      }
    }
  }
}

